test/ui/src/compile_fail/std/emit_props_optional_non_ref.rs
fn main() {
    emit::emit!("template", #[emit::optional] some: Some(1));
}
